# phone-link

./: .gitignore  README.md  dashboard_screen.dart  tasks.md
desktop/: CMakeLists.txt  main.cpp  nsd_broadcaster.cpp  nsd_broadcaster.h  socket_server.cpp  socket_server.h
desktop/core/: backend.cpp  backend.h
desktop/features/clipboard/: clipboardhandler.cpp  clipboardhandler.h  clipboardmodel.cpp  clipboardmodel.h
desktop/features/filetransfer/: filetransferhandler.cpp  filetransferhandler.h  sharedfilesmodel.cpp  sharedfilesmodel.h
desktop/features/messaging/: messagemodel.cpp  messagemodel.h  messaginghandler.cpp  messaginghandler.h
desktop/features/system/: systemhandler.cpp  systemhandler.h
desktop/mdns/: discoverylist.cpp  discoverylist.h  mdnsmanager.cpp  mdnsmanager.h  phonelinkadaptor.cpp
desktop/protocol/: message.h  messageparser.cpp  messageparser.h  messagerouter.cpp  messagerouter.h  protocoltypes.h
desktop/qml/: App.qml  main.qml  qmldir
desktop/qml/layout/: MainContent.qml  NavigationBar.qml
desktop/qml/pages/connection/: ConnectedPage.qml  DiscoveryPage.qml  RegistrationPage.qml  ServerControlPage.qml
desktop/qml/pages/shared/: ClipboardItemsPage.qml  SharedContentPage.qml  SharedFilesPage.qml  UnreadMessagesPage.qml
desktop/qml/theme/: Colors.qml
desktop/tcp/: protocol.h  tcpserver.cpp  tcpserver.h
mobile/flutter_ui/: pubspec.yaml
mobile/flutter_ui/android/app/src/main/: AndroidManifest.xml
mobile/flutter_ui/android/app/src/main/kotlin/com/example/flutter_ui/: MainActivity.kt
mobile/flutter_ui/android/app/src/main/kotlin/com/example/flutter_ui/features/: ClipboardHandler.kt  NotificationHandler.kt  PhoneLinkNotificationService.kt  SmsHandler.kt
mobile/flutter_ui/android/app/src/main/kotlin/com/example/flutter_ui/service/: PhoneLinkService.kt
mobile/flutter_ui/lib/: app.dart  app_providers.dart  main.dart
mobile/flutter_ui/lib/core/: packet.dart
mobile/flutter_ui/lib/data/: discovered_device.dart  local_device.dart  paired_device.dart  phone_notification.dart  sms_message.dart
mobile/flutter_ui/lib/services/: clipboard_service.dart  connection_manager.dart  file_transfer_service.dart  mdns_discovery.dart  mdns_registration.dart  network_service.dart  notification_service.dart  nsd_service.dart  pairing_service.dart  settings_service.dart  sms_service.dart  tcp_client.dart
mobile/flutter_ui/lib/ui/: available_devices_sheet.dart  home.dart  messages_screen.dart  notifications_screen.dart  permissions_sheet.dart
mobile/flutter_ui/lib/utils/: helpers.dart  nsd.dart
mobile/flutter_ui/macos/Flutter/: GeneratedPluginRegistrant.swift
mobile/flutter_ui/windows/flutter/: generated_plugins.cmake
